--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 variables:
-  azureSubscription: Free Trial
+  azureSubscription: Tail2wind
   resourcegroup: TailwindTraders
   location: East US
   ImageName: tailwind2traders
