Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 variables:
-  azureSubscription: Tail2wind
+  azureSubscription: Azure SP
   resourcegroup: windtailtraders
   location: Australia Southeast
   ImageName: website
